--- a/SFML_Project_Template/SFML_Project_Template.vcxproj
+++ b/SFML_Project_Template/SFML_Project_Template.vcxproj
@@ -80,6 +80,7 @@
     <None Include="..\SampleShaders\color_frag.glsl" />
     <None Include="..\SampleShaders\flatten_vert.glsl" />
     <None Include="..\SampleShaders\heightMap_frag.glsl" />
+    <None Include="..\SampleShaders\heightMap_vert.glsl" />
     <None Include="..\SampleShaders\minimal_frag.glsl" />
     <None Include="..\SampleShaders\minimal_vert.glsl" />
     <None Include="..\SampleShaders\modelcolor_vert.glsl" />
