--- a/SFML_Project_Template/SFML_Project_Template.vcxproj.filters
+++ b/SFML_Project_Template/SFML_Project_Template.vcxproj.filters
@@ -47,6 +47,9 @@
     <None Include="..\SampleShaders\heightMap_frag.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="..\SampleShaders\heightMap_vert.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
